<resources>
    <string name="app_name">Android</string>
    <string name="nouvelle_partie">Nouvelle Partie</string>
    <string name="game_logo">game_logo</string>
    <string name="credits">CREDITS</string>
    <string name="options">OPTIONS</string>
    <string name="creditstext">creditsText</string>
    <string name="button">Button</string>
    <string name="lancer_le_d">Lancer le dé</string>
    <string name="title_activity_dice">DiceActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="defaultPoints">20</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="commit_dice_txt">S\'engager</string>
    <string name="become_king">Devenir Le Roi De New York</string>
    <string name="Redraw">Repiocher</string>
    <string name="Buy">Acheter</string>
    <string name="Skip">Quitter</string>
    <string name="next_player_str">Prochain Joueur</string>
    <string name="skip_hill">Rester</string>
    <string name="RedrawWC">REPIOCHER (Cout: 3)</string>
    <string name="boats">BOATS</string>
    <string name="valentin_bordeianu">Valentin BORDEIANU</string>
    <string name="quentin_tenga">Quentin Tenga</string>
    <string name="gurpal_singh">Gurpal Singh</string>
    <string name="anthony_bousser">Anthony Bousser</string>
</resources>