<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BuyCardsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:animateLayoutChanges="true"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true"
                app:strokeColor="#292929"
                app:strokeWidth="5dp"
                tools:ignore="DuplicateSpeakableTextCheck">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/CardOneImg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/card_0_img"
                        tools:ignore="ImageContrastCheck" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/CardOneCost"
                        android:layout_width="50dp"
                        android:layout_height="42dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/defaultPoints"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="#FFFFFF"
                        app:chipStrokeColor="#FFFFFF"
                        app:chipStrokeWidth="2dp"
                        app:chipSurfaceColor="#00BCD4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:animateLayoutChanges="true"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true"
                app:strokeColor="#292929"
                app:strokeWidth="5dp"
                tools:ignore="DuplicateSpeakableTextCheck">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/CardTwoImg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/card_1_img"
                        tools:ignore="ImageContrastCheck" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/CardTwoCost"
                        android:layout_width="50dp"
                        android:layout_height="42dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/defaultPoints"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="#FFFFFF"
                        app:chipStrokeColor="#FFFFFF"
                        app:chipStrokeWidth="2dp"
                        app:chipSurfaceColor="#00BCD4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:animateLayoutChanges="true"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true"
                app:strokeColor="#292929"
                app:strokeWidth="5dp"
                tools:ignore="DuplicateSpeakableTextCheck">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/CardThreeImg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/card_4_img"
                        tools:ignore="ImageContrastCheck" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/CardThreeCost"
                        android:layout_width="50dp"
                        android:layout_height="42dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/defaultPoints"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="#FFFFFF"
                        app:chipStrokeColor="#FFFFFF"
                        app:chipStrokeWidth="2dp"
                        app:chipSurfaceColor="#00BCD4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#D6D6D6"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/shop_quit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:scaleX=".9"
                android:scaleY=".9"
                android:text="@string/Skip"
                app:backgroundTint="#F44336" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>