<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RollDiceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:baselineAligned="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/dice_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:animateLayoutChanges="true"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true"
                    app:strokeColor="#E91E63"
                    tools:ignore="DuplicateSpeakableTextCheck">

                    <ImageView
                        android:id="@+id/dice_0_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/dice_2"
                        tools:ignore="ImageContrastCheck" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/dice_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:animateLayoutChanges="true"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true"
                    app:strokeColor="#E91E63">

                    <ImageView
                        android:id="@+id/dice_1_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/dice_4"
                        tools:ignore="ImageContrastCheck" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/dice_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:animateLayoutChanges="true"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true"
                    app:strokeColor="#E91E63">

                    <ImageView
                        android:id="@+id/dice_2_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/dice_3"
                        tools:ignore="ImageContrastCheck" />

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/dice_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:animateLayoutChanges="true"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true"
                    app:strokeColor="#E91E63">

                    <ImageView
                        android:id="@+id/dice_3_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/dice_6"
                        tools:ignore="ImageContrastCheck" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/dice_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:animateLayoutChanges="true"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true"
                    app:strokeColor="#E91E63">

                    <ImageView
                        android:id="@+id/dice_4_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/dice_5"
                        tools:ignore="ImageContrastCheck" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/dice_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:animateLayoutChanges="true"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true"
                    app:strokeColor="#E91E63">

                    <ImageView
                        android:id="@+id/dice_5_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/dice_1"
                        tools:ignore="ImageContrastCheck" />

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#D6D6D6"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/roll_dice_fragment_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleX=".9"
                android:scaleY=".9"
                android:text="@string/lancer_le_d"
                app:backgroundTint="#2196F3"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/commit_dice_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:scaleX=".9"
                android:scaleY=".9"
                android:text="@string/commit_dice_txt"
                app:backgroundTint="#4CAF50" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>